attempt to fix h1 font weight problem on safari and mobile

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -248,7 +248,7 @@ h1 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  font-weight: bold;
+  font-weight: 500;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
   line-height: 1.1;
